--- a/entry/src/main/resources/base/profile/api_config.json
+++ b/entry/src/main/resources/base/profile/api_config.json
@@ -1,14 +1,14 @@
 {
   "dev": {
-    "baseUrl": "https://hengtai.ruiztech.cn:4443/",
-    "login": "ucenter/auth/login/password"
+    "baseUrl": "https://warehouse-core.ruiztech.cn:4443/ruiz",
+    "login": "/auth/login/password"
   },
   "test": {
-    "baseUrl": "https://hengtai.ruiztech.cn:4443/",
-    "login": "ucenter/auth/login/password'"
+    "baseUrl": "https://warehouse-core.ruiztech.cn:4443/ruiz",
+    "login": "/auth/login/password'"
   },
   "prod": {
-    "baseUrl": "https://hengtai.ruiztech.cn:4443/",
-    "login": "ucenter/auth/login/password'"
+    "baseUrl": "https://warehouse-core.ruiztech.cn:4443/ruiz",
+    "login": "/auth/login/password'"
   }
 }
