--- a/oh-package.json5
+++ b/oh-package.json5
@@ -3,7 +3,8 @@
   "description": "Please describe the basic information.",
   "dependencies": {
     "@ohos/axios": "^2.2.6",
-    "@hw-agconnect/petal-aegis": "^1.4.11-300"
+    "@hw-agconnect/petal-aegis": "^1.4.11-300",
+    "@ohos/crypto-js": "^2.0.4"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
